--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
                         <a href="projects/eBusiness/index.html" target="_blank"><img class="img-fluid" src="assets/images/proyecto-web-2.png" alt="screenshot" ></a>
                     </div>
                      <div role="tabpanel" class="tab-pane fade" id="feature-2-2">
-                        <a href="html5up-helios" target="_blank"><img class="img-fluid" src="assets/images/proyecto-web-3.png" alt="screenshot" ></a>
+                        <a href="projects/html5up-helios/index.html" target="_blank"><img class="img-fluid" src="assets/images/proyecto-web-3.png" alt="screenshot" ></a>
                     </div>
                     <div role="tabpanel" class="tab-pane fade" id="feature-2-3">
                         <a href="projects/Knight/index.html" target="_blank"><img class="img-fluid" src="assets/images/proyecto-web-4.png" alt="screenshot" ></a>
