--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                 <p></p>
                 
             </div>
-            <a class="btn btn-cta btn-primary nav-link scrollto" href="#">Regresar</a>
+            <a class="btn btn-cta btn-primary scrollto" href="#header">Regresar</a>
             
         </div>
     </div>
@@ -283,7 +283,6 @@
     <script type="text/javascript" src="assets/plugins/jquery-3.3.1.min.js"></script>
     <script type="text/javascript" src="assets/plugins/bootstrap/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="assets/plugins/jquery-scrollTo/jquery.scrollTo.min.js"></script> 
-    <script type="text/javascript" src="assets/js/main.js"></script>
-    <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
+    <script type="text/javascript" src="assets/js/main.js"></script>    
 </body>
 </html> 
