--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <ul class="nav navbar-nav">
                         <li class="nav-item"><a class="active nav-link scrollto" href="#about">Sobre Mi</a></li>                        
                         <li class="nav-item"><a class="nav-link scrollto" href="#features">Proyectos</a></li> 
-                        <li class="nav-item"><a href="https://www.github.com/neocarvajal" target="_blank">Github</a></li>                       
+                        <li class="nav-item"><a class="nav-link" href="https://www.github.com/neocarvajal" target="_blank">Github</a></li>                       
                         <li class="nav-item"><a class="nav-link scrollto" href="#team">Contacto</a></li>                        
                     </ul><!--//nav-->
                 </div><!--//navabr-collapse-->
@@ -269,7 +269,7 @@
                 <p></p>
                 
             </div>
-            <a class="btn btn-cta btn-primary scrollto" href="#header">Regresar</a>
+            <a class="btn btn-cta btn-primary scrollto" href="#hero">Regresar</a>
             
         </div>
     </div>
