--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                 <li class="list-inline-item" data-placement="top" title="PYTHON"><img src="assets/images/logo-python.svg" alt="PYTHON"></li>
                 <li class="list-inline-item" data-placement="top" title="COMPOSER"><img src="assets/images/logo-composer.svg" alt="COMPOSER"></li>
                 <li class="list-inline-item" data-placement="top" title="LARAVEL"><img src="assets/images/logo-laravel.svg" alt="LARAVEL"></li>
-                <li class="list-inline-item" data-placement="top" title="NODEJS"><img src="assets/images/react.png" alt="REACT JS"></li>
+                <li class="list-inline-item" data-placement="top" title="NODEJS"><img src="assets/images/react.png" width="60" height="60" alt="REACT JS"></li>
                 <li class="list-inline-item" data-placement="top" title="NPM"><img src="assets/images/logo-npm.svg" alt="NPM"></li>
                 <li class="list-inline-item" data-placement="top" title="GRUNT"><img src="assets/images/logo-grunt.png" alt="GRUNT"></li>
                 <li class="list-inline-item" data-placement="top" title="GIT"><img src="assets/images/logo-git.svg" alt="GIT"></li>
