--- a/index.html
+++ b/index.html
@@ -204,7 +204,8 @@
                             <h3 class="member-name">Erick Carvajal</h3>
                             <div class="member-title">@neocarvajal</div>
                             <ul class="social list-inline">                                                              
-                                <li class="list-inline-item"><a class="envelope" href="mailto:neocarvajal@gmail.com"><i class="fas fa-envelope"></i></a></li> 
+                                <li class="list-inline-item"><a class="envelope" href="mailto:neocarvajal@gmail.com"><i class="fas fa-envelope"></i></a></li>
+                                <li class="list-inline-item"><a class="linkedin" href="https://linkedin.com/in/neocarvajal" target="_blank"><i class="fab fa-linkedin"></i></a></li>
                                 <li class="list-inline-item"><a class="github" href="https://github.com/neocarvajal" target="_blank"><i class="fab fa-github"></i></a></li>
                                 <li class="list-inline-item"><a class="instagram" href="https://www.instagram.com/neocarvajal/" target="_blank"><i class="fab fa-instagram"></i></a></li>                                
                                 <li class="list-inline-item"><a class="twitter" href="https://twitter.com/neocarvajal" target="_blank"><i class="fab fa-twitter"></i></a></li>                                
